--- a/ReadMe
+++ b/ReadMe
@@ -8,7 +8,7 @@ Tips:
 1. This version uses Java SDK 1.7.
 2. The video file and NZCER-spelling-lists.txt must be placed in the same directory as the SpellingAid.jar
 3. Please wait for Festival to finish speaking before typing.
-4. Please FFMPEG and at least one of the festival voice packages are installed.
+4. Please ensure that FFMPEG and at least one of the festival voice packages are installed.
 5. If you want to load your own file, it is best if you can copy it into the current directory first and select this specific copy.
 This reduces the possibility of errors when the programs tries to read the file.
 
@@ -19,3 +19,8 @@ Copyright:
 This software is copyrighted by the University of Auckland and the developers.
 The rights controlled are the copy, distribution, modification, and commercialisation in the future.
 This version is solely for educational, research, and not-for-profit purposes.
+
+Credits:
+1. All the button icons are retrieved from https://www.iconfinder.com/.
+2. The reward music is retrieved from http://www.bensound.com.
+3. The Big Buck Bunny video is sponsored by the SOFTENG 206 lecturer and the copyright belongs to the authors/producers.
